# DeRec

./: CMakeLists.txt  README.md
include/: constants.hpp  deidentify.hpp  utils.hpp
src/: deidentify.cpp  main.cpp  utils.cpp
